deployment/Gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb-gateway-class
spec:
  controllerName: eks.amazonaws.com/aws-load-balancer-controller
