deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon

---
apiVersion: v1
kind: Namespace
metadata:
  name: flipkart

---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
